--- a/menu.html
+++ b/menu.html
@@ -403,13 +403,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
+                    <a href="./careers.html" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
                         <i data-lucide="briefcase" class="w-5 h-5 text-red-500"></i>
                         Careers
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
+                    <a href="community.html" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
                         <i data-lucide="heart" class="w-5 h-5 text-red-500"></i>
                         Community
                     </a>
@@ -559,7 +559,7 @@
                         <div class="side-item"><h3>Cornbread</h3><span style="color: #cc0000; font-weight: bold;">$2.99</span></div>
                         <div class="side-item"><h3>Mashed Potatoes</h3><span style="color: #cc0000; font-weight: bold;">$3.99</span></div>
                         <div class="side-item"><h3>Baked Beans</h3><span style="color: #cc0000; font-weight: bold;">$3.99</span></div>
-                        <div class="side-item"><h3>Cole Slaw Combo</h3><span style="color: #cc0000; font-weight: bold;">$4.99</span></div>
+                        <div class="side-item"><h3>Collard Greens</h3><span style="color: #cc0000; font-weight: bold;">$3.99</span></div>
                     </div>
                 </section>
 
