--- a/community.html
+++ b/community.html
@@ -355,7 +355,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
+                    <a href="./careers.html" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
                         <i data-lucide="briefcase" class="w-5 h-5 text-red-500"></i>
                         Careers
                     </a>
@@ -539,9 +539,9 @@
 
                 <!-- Brand League City TX -->
                 <div class="flex flex-col items-center group cursor-pointer">
-                    <a href="league-city.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(0,167,157,0.6)]">
+                    <div class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(0,167,157,0.6)]">
                         <img src="images/brand.png" alt="Location - League City TX" class="h-24 md:h-28 w-auto" />
-                    </a>
+                    </div>
                     <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City TX</p>
                 </div>
 
