--- a/index.html
+++ b/index.html
@@ -769,9 +769,9 @@
 
                 <!-- Brand League City TX -->
                 <div class="flex flex-col items-center group cursor-pointer">
-                    <a href="league-city.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(0,167,157,0.6)]">
+                    <div class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(0,167,157,0.6)]">
                         <img src="images/brand.png" alt="Location - League City TX" class="h-24 md:h-28 w-auto" />
-                    </a>
+                    </div>
                     <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City TX</p>
                 </div>
 
