--- a/locations.html
+++ b/locations.html
@@ -123,11 +123,11 @@
         <section class="bg-[#e7ddcf] py-10 md:py-16">
             <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 px-4">
                 <!-- League City Card -->
-                <a href="league-city.html" class="block card-hover">
+                <div class="block card-hover">
                     <div class="relative overflow-hidden rounded-md">
                         <img src="images/League CIty, tx RRB Card.jpg" alt="League City" class="w-full h-auto object-cover" />
                     </div>
-                </a>
+                </div>
 
                 <!-- Katy Card -->
                 <div class="block card-hover">
@@ -222,9 +222,9 @@
 
                 <!-- Brand League City TX -->
                 <div class="flex flex-col items-center group cursor-pointer">
-                    <a href="league-city.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(0,167,157,0.6)]">
+                    <div class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(0,167,157,0.6)]">
                         <img src="images/brand.png" alt="Location - League City TX" class="h-24 md:h-28 w-auto" />
-                    </a>
+                    </div>
                     <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City TX</p>
                 </div>
 
